// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Assessment Converter oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "data": Object {
    "content": Object {
      "rubric": true,
      "scoreActions": "someScoreActions",
      "triggers": Array [],
    },
  },
  "key": "mockKey",
  "nodes": Array [
    Object {
      "nodes": Array [
        Object {
          "display": undefined,
          "name": Object {
            "display": "Attempts",
            "name": "attempts",
            "value": "undefined",
          },
          "options": undefined,
          "value": undefined,
        },
        Object {
          "display": undefined,
          "name": Object {
            "display": "Review",
            "name": "review",
            "options": Array [
              "always",
              "never",
              "no-attempts-remaining",
            ],
            "value": undefined,
          },
          "options": undefined,
          "value": undefined,
        },
        Object {
          "display": undefined,
          "name": Object {
            "checked": true,
            "display": "Lock Assessment on Start",
            "name": "assessment lock",
            "value": false,
          },
          "options": undefined,
          "value": undefined,
        },
      ],
      "object": "block",
      "type": "ObojoboDraft.Sections.Assessment.Settings",
    },
    "PageOboToSlate",
    "QuestionBankChildOboToSlate",
    "ActionsChildOboToSlate",
    "RubricChildOboToSlate",
  ],
  "object": "block",
  "type": "ObojoboDraft.Sections.Assessment",
}
`;

exports[`Assessment Converter oboToSlate converts an OboNode to a Slate node 2`] = `
Object {
  "data": Object {
    "content": Object {
      "rubric": false,
      "scoreActions": "someScoreActions",
      "triggers": Array [
        Object {
          "actions": Array [
            Object {
              "type": "nav:lock",
            },
          ],
          "type": "onStartAttempt",
        },
        Object {
          "actions": Array [
            Object {
              "type": "nav:unlock",
            },
          ],
          "type": "onEndAttempt",
        },
      ],
    },
  },
  "key": "mockKey",
  "nodes": Array [
    Object {
      "nodes": Array [
        Object {
          "display": undefined,
          "name": Object {
            "display": "Attempts",
            "name": "attempts",
            "value": "undefined",
          },
          "options": undefined,
          "value": undefined,
        },
        Object {
          "display": undefined,
          "name": Object {
            "display": "Review",
            "name": "review",
            "options": Array [
              "always",
              "never",
              "no-attempts-remaining",
            ],
            "value": undefined,
          },
          "options": undefined,
          "value": undefined,
        },
        Object {
          "display": undefined,
          "name": Object {
            "checked": true,
            "display": "Lock Assessment on Start",
            "name": "assessment lock",
            "value": true,
          },
          "options": undefined,
          "value": undefined,
        },
      ],
      "object": "block",
      "type": "ObojoboDraft.Sections.Assessment.Settings",
    },
    "PageOboToSlate",
    "QuestionBankChildOboToSlate",
    "ActionsChildOboToSlate",
  ],
  "object": "block",
  "type": "ObojoboDraft.Sections.Assessment",
}
`;

exports[`Assessment Converter slateToObo converts a Slate node to an OboNode 1`] = `
Object {
  "children": Array [
    "PageChild",
    "QuestionBankChild",
  ],
  "content": Object {
    "attempts": "someAttemptText",
    "review": "someReview",
    "rubric": "RubricChild",
    "scoreActions": "ActionsChild",
    "triggers": Array [
      Object {
        "actions": Array [
          Object {
            "type": "nav:lock",
          },
        ],
        "type": "onStartAttempt",
      },
      Object {
        "actions": Array [
          Object {
            "type": "nav:unlock",
          },
        ],
        "type": "onEndAttempt",
      },
    ],
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`Assessment Converter slateToObo converts a Slate node to an OboNode 2`] = `
Object {
  "children": Array [
    "PageChild",
    "QuestionBankChild",
  ],
  "content": Object {
    "attempts": "someAttemptText",
    "review": "someReview",
    "rubric": "RubricChild",
    "scoreActions": "ActionsChild",
    "triggers": Array [
      Object {
        "actions": Array [
          Object {
            "type": "nav:lock",
          },
        ],
        "type": "onStartAttempt",
      },
      Object {
        "actions": Array [
          Object {
            "type": "nav:unlock",
          },
        ],
        "type": "onEndAttempt",
      },
    ],
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`Assessment Converter slateToObo converts a Slate node to an OboNode 3`] = `
Object {
  "children": Array [
    "PageChild",
    "QuestionBankChild",
  ],
  "content": Object {
    "attempts": "someAttemptText",
    "review": "someReview",
    "rubric": "RubricChild",
    "scoreActions": "ActionsChild",
    "triggers": Array [],
  },
  "id": "mockKey",
  "type": "mockType",
}
`;
